# hcc_extraction

./: .docker.env  .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  test_prompt.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
data/: HCC_relevant_codes.csv
data/output/: hcc_results.json
data/progress_notes/: pn_5  pn_6  pn_7  pn_8  pn_9
output/: hcc_results.json
src/hcc_pipeline/: main.py
src/hcc_pipeline/api/: app.py
src/hcc_pipeline/core/: evaluation.py  extraction.py
src/hcc_pipeline/utils/: __init__.py  file_handlers.py  logging.py
src/hcc_pipeline/workflows/: hcc_workflow.py
tests/unit/: test_extraction.py
