[tool.poetry]
name = "hcc-pipeline"
version = "0.1.0"
description = "HCC Documentation Automation Pipeline"
authors = ["ujjwal kumar <ujjwalsinghrajput2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<4.0"
google-generativeai = "^0.3.0"
pandas = "^2.0.3"
python-dotenv = "^1.0.0"
uvicorn = "^0.34.0"
fastapi = "^0.115.11"
langgraph = "^0.3.10"  
langgraph-cli = { extras = ["inmem"], version = "^0.1.77" } 
langgraph-api = "^0.0.30"
langchain = "^0.3.20"
anthropic = "^0.49.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipython = "^8.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"